@@ -1,0 +1,73 @@
+<!--
+    Translation of CVS Revision: 1.19
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<h2>LilyPond existe gr&acirc;ce &agrave;</h2>
+
+<ul>
+
+<li>Han-Wen Nienhuys et Jan Nieuwenhuizen, d&eacute;veloppement du noyau
+<p>
+Jan est actuellement d&eacute;veloppeur d'applications web.
+Il est altiste. Han-Wen monte une soci&eacute;t&eacute; de promotion de LilyPond.
+Il consacre son temps libre &agrave; la pratique du cor.
+<p>
+
+<li>Graham Percival, &eacute;diteur de la documentation
+<p>
+Graham &eacute;tudie actuellement l'alto &agrave; l'universit&eacute; de Victoria,
+au Canada, bien qu'il ne joue de l'alto que depuis deux ans,
+et du violoncelle depuis vingt.
+Quand il ne travaille pas sur la doc de LilyPond, il compose de la musique tonale.
+
+<li>Pedro Kr&oelig;ger, Ma&icirc;tre de construction
+<p>
+Pedro est professeur de composition, harmonie et contrepoint &agrave;
+l'universit&eacute; f&eacute;d&eacute;rale de Bahia, au Br&eacute;sil.
+Il consacre son temps libre &agrave; l'alto et &agrave; la programmation.
+<p>
+
+<li>Erik Sandberg, Ma&icirc;tre des bogues
+
+</ul>
+
+
+<h2><a name="website"><tt>lilypond.org</tt> existe gr&acirc;ce &agrave;</h2>
+
+<ul>
+
+<li>Tineke de Munnik, traduction n&eacute;erlandaise
+
+<li>Jean-Charles Malahieude, Gauvain
+Pocentek et John Mandereau, traduction fran&ccedil;aise
+
+</ul>
+
+
+<h2>Merci &agrave; ..</h2> 
+
+.. tous les <a
+href="@DOC@v2.4/Documentation/topdocs/out-www/AUTHORS.html">codeurs de LilyPond</a>,
+chasseurs de bogues et utilisateurs. Remerciements particuliers &agrave;
+
+<ul>
+
+<li> Werner Lemberg, pour sa TeXpertise
+
+<li> David Chan et Chris Sawer, pour leur gestion de l'archive Mutopia
+
+<li> Mats Bengtsson, qui r&eacute;pond inlassablement aux questions
+
+<li> Matthias Neeracher, pour les mises &agrave; jour de la version MacOS X fink
+
+<li> Paul Roberts et James Ingram, pour les astuces de gravure
+
+<li> <a href="http://www.stumptuous.com">Krista Scott-Dixon</a>, pour la
+photographie des n&eacute;nuphars.
+
+</ul>
